--- a/style.css
+++ b/style.css
@@ -9,13 +9,17 @@ body {
     height: 100vh;
 }
 
-.logo {
-    width: 60px;
+h1 {
+    font-size: 35px;
+    font-weight: 300;
+    text-align: right;
+
+
+    span {
+        font-weight: 400;
+    }
 }
 
-.logo-sony {
-    width: 120px;
-}
 
 header {
     height: 20vh;
@@ -24,31 +28,38 @@ header {
     align-items: center;
     background-color: #182580;
     padding: 5px 3%;
-
 }
 
-#right {
-    display: flex;
-    gap: 50px;
-    font-size: 25px;
+.logo-ps {
+    width: 60px;
 }
 
-section {
+.logo-sony {
+    width: 120px;
+}
+
+
+.item {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 80vh;
     padding: 80px;
     gap: 20px;
+}
 
+.div-text {
+    width: 36vw;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: column;
+    gap: 10px;
 
 }
 
-.img-console {
-    width: 100%
-}
-
-.img {
+.div-img {
     width: 50%;
     height: 50%;
     display: flex;
@@ -56,48 +67,150 @@ section {
     align-items: center;
 }
 
-.ps-two {
-    width: 70%;
+.img-console {
+    width: 600px;
 }
 
-.PS3 {
-    width: 100%;
-}
 
-.PS4 {
-    width: 80%;
-}
-
-.PS5 {
-    width: 100%;
-}
-
-.text {
-    width: 36vw;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    flex-direction: column;
-    gap: 10px;
-}
-
-h1 {
-    font-size: 60px;
-    font-weight: 300;
-
-}
-
-p {
-    font-size: 20px;
-    font-weight: 300;
-    text-align: left;
+.ps2 {
+    width: 300px;
 }
 
 button {
     border: none;
-    border-radius: 10px;
-    background-color: #1E5DDB;
+    border-radius: 19px;
+    background-color: #fff;
     width: 100px;
     padding: 6px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0070D1;
+    border: none;
+    transition: .5s;
+}
+
+.indicator {
+    position: absolute;
+    top: 80%;
+    left: 5%;
+
+
+
+    .number {
+        font-size: 4em;
+    }
+
+    ul {
+        display: flex;
+        gap: 10px;
+    }
+
+    li {
+        list-style: none;
+        width: 50px;
+        height: 5px;
+        background-color: #182580;
+        border-radius: 10px;
+        transition: .5s;
+    }
+
+    .active {
+        background-color: #0070D1;
+    }
+}
+
+.arrows {
+    width: 93vw;
+    position: absolute;
+    display: flex;
+    left: 50%;
+    justify-content: space-between;
+    transform: translate(-50%, -25%);
+
+
+    .seta {
+        width: 20px;
+    }
+
+    .esquerda {
+        transform: rotate(0.5turn);
+    }
+
+    button {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        padding: 10px;
+        background: #0070D1;
+    }
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    padding: 80px;
+    /* overflow: hidden; */
+
+    .list {
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+
+        .item {
+            transform: translateX(100vw);
+            transition: .5s;
+            opacity: 0;
+
+
+
+            .div-text {
+
+                h1,
+                a {
+                    transform: translateX(200px);
+                    transition: .5s;
+                    transition-delay: .3s;
+                }
+
+                h1 {
+                    transition-delay: .5s;
+                }
+
+                a {
+                    transition-delay: .9s;
+                }
+
+            }
+
+            .div-img {
+                img {
+                    transition: .7s;
+                    transition-delay: .3s;
+                }
+            }
+        }
+
+        .active {
+            transform: translateX(0);
+            transition: .5s;
+            opacity: 1;
+
+            .div-text {
+
+                h1,
+                a {
+                    transform: translateX(0);
+                }
+            }
+
+
+        }
+
+    }
 }
