--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ h1 {
     }
 }
 
-
 header {
     height: 20vh;
     display: flex;
@@ -43,6 +42,7 @@ section {
     height: 80vh;
     display: flex;
     position: relative;
+    overflow: hidden;
 
 
     .list {
@@ -213,4 +213,71 @@ section {
             }
         }
     }
+}
+
+
+@media screen and (max-width: 600px) {
+
+    section {
+        .list {
+            .item {
+                .div-img {
+                    position: absolute;
+                    top: 50%;
+                    left: 12%;
+                    transform: translateY(-50%);
+                    width: 80%;
+
+
+
+                }
+            }
+        }
+    }
+
+    .img-console {
+        width: 100%;
+    }
+
+    .ps2 {
+        width: 65%;
+    }
+
+
+
+
+    .div-text {
+        position: absolute;
+        top: 22%;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        gap: 10px;
+    }
+
+
+    h1 {
+        font-size: 30px;
+        font-weight: 300;
+        text-align: start;
+
+
+    }
+
+    button {
+        background-color: #0070D1;
+    }
+
+    .indicator {
+        top: 86%;
+
+        .number {
+            font-size: 3em;
+        }
+    }
+
+
 }
